--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </table>
         </main>
         <div id="footer">
-            Brian Su&nbsp;&nbsp;<a href="https://github.com/brianbbsu/utaha-rating" target="_blank" id="github-link"><img height="16" width="16" src="github.svg" /></a>&nbsp;&nbsp;2018
+            Brian Su&nbsp;&nbsp;<a href="https://github.com/brianbbsu/utaha-rating" target="_blank" id="github-link"><img height="16" width="16" src="github.svg" /></a>&nbsp;&nbsp;2018-2019
         </div> 
     </div>
     <script src="index.js"></script>
